# keth

./: .cursorrules  .doc.md.swo  .doc.md.swp  .env.example  .gitignore  .gitmodules  .tool-versions  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  bot_gpg_key.asc  codecov.yml  conftest.py  cspell.json  debug.py  dictionary.txt  doc.md  foundry.toml  log_analyzer.py  log_out.txt  pyproject.toml  rust-toolchain  rustfmt.toml  skip-ef-tests.json
cairo/: cairo_core  cairo_ec  mpt  pyproject.toml
cairo/base_types/: exceptions.cairo
cairo/ethereum/: base_types.cairo  exceptions.cairo  rlp.cairo  trace.cairo
cairo/ethereum/cancun/: blocks.cairo  bloom.cairo  body.cairo  fork.cairo  fork_types.cairo  init.cairo  main.cairo  state.cairo  transactions.cairo  transactions_types.cairo  trie.cairo  trie_diff.cairo  trie_types.cairo  vm.cairo
cairo/ethereum/crypto/: alt_bn128.cairo  bls12_381.cairo  elliptic_curve.cairo  fq_ops.cairo  hash.cairo  kzg.cairo
cairo/ethereum/prague/: blocks.cairo  bloom.cairo  fork.cairo  fork_types.cairo  requests.cairo  state.cairo  transactions.cairo  transactions_types.cairo  trie.cairo  vm.cairo
cairo/ethereum/utils/: bytes.cairo  dicts.cairo  hash_dicts.cairo  numeric.cairo
cairo/ethereum_rlp/: rlp.cairo  rlp_types.cairo
cairo/ethereum_types/: bytes.cairo  numeric.cairo  others.cairo
cairo/jit/: main.cairo
cairo/keth_cli/: cli.py  config.py  core.py  exceptions.py  orchestration.py  steps.py
cairo/legacy/utils/: array.cairo  bytes.cairo  constants.py  dict.cairo  uint256.cairo  utils.cairo
cairo/programs/: block.cairo  block.json  fibonacci.json  fork.cairo  os.cairo  os.json  transaction_hash.cairo  transaction_hash.json
cairo/scripts/: __init__.py  compile_cairo.py  convert_py_to_cairo.py  generate_tests.py  keth.py  mpt.py  prove_block.py  prove_cairo.py  state_root_from_zkpi.py  stf_from_zkpi.py  test.py  test_keth_cli.py  zkpi_to_eels.py  zkpi_to_eels_json.py  zkpi_to_stf.py
cairo/src/: account.cairo  constants.cairo  errors.cairo  evm.cairo  gas.cairo  interpreter.cairo  memory.cairo  model.cairo  stack.cairo  state.cairo
cairo/src/curve/: alt_bn128.cairo  ec_ops.cairo  g1_point.cairo  secp256k1.cairo
cairo/src/instructions/: block_information.cairo  duplication_operations.cairo  environmental_information.cairo  exchange_operations.cairo  logging_operations.cairo  memory_operations.cairo  push_operations.cairo  sha3.cairo  stop_and_math_operations.cairo  system_operations.cairo
cairo/src/interfaces/: interfaces.cairo
cairo/src/precompiles/: blake2f.cairo  datacopy.cairo  ec_recover.cairo  ecadd.cairo  ecmul.cairo  kakarot_precompiles.cairo  modexp.cairo  p256verify.cairo  precompiles.cairo  ripemd160.cairo  sha256.cairo
cairo/src/utils/: basic_circuit.cairo  bytes.cairo  circuit_basic_field_ops.cairo  circuit_utils.cairo  compile_cairo.py  compiler.py  constants.py  dict.cairo  ecdsa_circuit.cairo  ecdsa_circuit.py  eth_transaction.cairo  hashdict.cairo  maths.cairo  rlp.cairo  signature.cairo  transaction.cairo  uint256.cairo  uint384.cairo  uint384.py  utils.cairo
cairo/tests/: conftest.py  test_cairo_addons.py  test_fixes_summary.md  test_hint_runner.cairo  test_hint_runner.py  test_keth_cli.py  test_patches.py  test_serde.cairo  test_serde.py
cairo/tests/ef_tests/: conftest.py  fetch.py  test_rlp.py  test_zkpi_to_eels_json.py
cairo/tests/ethereum/: test_rlp.cairo  test_rlp.py
cairo/tests/ethereum_rlp/: test_rlp.py
cairo/tests/ethereum_types/: test_bytes.py
cairo/tests/fixtures/: compiler.py  data.py  runner.py
cairo/tests/jit/: test_main.py
cairo/tests/programs/: fibonacci.cairo  test_fork.cairo  test_fork.py  test_os.cairo  test_os.py
cairo/tests/src/: conftest.py  test_account.cairo  test_account.py  test_evm.cairo  test_evm.py  test_gas.cairo  test_gas.py  test_memory.cairo  test_memory.py  test_stack.cairo  test_stack.py  test_state.cairo  test_state.py
cairo/tests/utils/: args_gen.py  assertion.py  caching.py  compiler.py  constants.py  coverage.py  data.py  debug.cairo  dict.cairo  errors.py  evm_builder.py  hash_utils.py  helpers.cairo  helpers.py  hints.py  message_builder.py  models.py  parsers.py  reporting.py  rust_compat.py  serde.py  solidity.py  strategies.py
cairo/utils/: fixture_loader.py  fq12.cairo  fq6.cairo
crates/cairo-addons/: Cargo.toml  README.md
crates/cairo-addons-lib/: Cargo.toml
crates/cairo-addons-lib/src/: lib.rs
crates/cairo-addons/.cargo/: config.toml
crates/cairo-addons/examples/: prover.rs
crates/cairo-addons/src/: lib.rs  stwo_bindings.rs
crates/exex/: Cargo.toml  transactions.json
crates/exex/cairo-programs/: fibonacci.cairo  fibonacci.json  transaction_hash.cairo  transaction_hash.json
crates/exex/src/: db.rs  execution.rs  exex.rs  hints.rs  lib.rs  model.rs  serde.rs
crates/exex/test_data/: valid_program.json
crates/exex/testdata/: block.json  keccak_add_uint256.json  model_memory.cairo  model_memory.json  model_option.cairo  model_option.json  model_stack.cairo  model_stack.json  os_program.json
crates/keth-run/: Cargo.toml  README.md  build.rs
crates/keth-run/src/: main.rs
crates/node/: Cargo.toml
crates/node/src/: engine.rs  execution.rs  lib.rs  node.rs
crates/pool/: Cargo.toml
crates/pool/src/: lib.rs
prover/: Cargo.toml
prover/src/: main.rs
python/cairo-addons/: .gitignore  README.md  pyproject.toml
python/cairo-addons/tests/: conftest.py  os.cairo  test_dict_manager.py  test_felt.py  test_memory_segments.py  test_program.py  test_relocatable.py  test_run_resources.py  test_runner.py  test_stripped_program.py
python/cairo-core/: pyproject.toml
python/cairo-core/tests/: test_maths.cairo  test_maths.py
python/cairo-ec/: README.md  pyproject.toml
python/cairo-ec/scripts/: compile_circuit.py
python/cairo-ec/src/: cairo_core
python/cairo-ec/tests/: test_circuits.cairo  test_circuits.py  test_ec_ops.cairo  test_ec_ops.py  (+4 more)
python/cairo-lint/: README.md  pyproject.toml
python/eth-rpc/: README.md  pyproject.toml
python/keth-types/: pyproject.toml
python/mpt/: README.md  pyproject.toml
(+541 files in other folders)
