[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Integration of the Kakarot Ethereum execution layer in the Reth client."
homepage = "https://github.com/kkrt-labs"
repository = "https://github.com/kkrt-labs/keth"
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [".github/"]

[workspace]
members = ["crates/cairo-addons"]
default-members = ["crates/cairo-addons"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
future_not_send = "allow"
fallible_impl_from = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "92232543984e20e984c5a7194561ff1fffa76dae" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "92232543984e20e984c5a7194561ff1fffa76dae" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "92232543984e20e984c5a7194561ff1fffa76dae" }
stwo_cairo_utils = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "92232543984e20e984c5a7194561ff1fffa76dae" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "92232543984e20e984c5a7194561ff1fffa76dae" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", tag = "v2.0.1", features = [
  "test_utils",
  "mod_builtin",
] }

[patch."https://github.com/lambdaclass/cairo-vm.git"]
cairo-vm = { git = "https://github.com/kkrt-labs/cairo-vm", rev = "3b5196e4469db0c0abb124cbcdc84bfbc8165acd" }
