[project]
name = "keth"
version = "0.1.0"
description = "An EVM proving backend in Cairo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairo-lang>=0.13.2",
]

[tool.uv]
dev-dependencies = ["jupyter>=1.1.1"]

[tool.uv.workspace]
members = ["cairo", "keth_scripts"]

[tool.isort]
profile = "black"

[tool.autoflake]
in_place = true
remove_unused_variables = true
remove_all_unused_imports = true

[tool.codespell]
ignore-words = '.codespellignore'
skip = '.git'
check-filenames = ''
check-hidden = ''

[tool.bandit]
exclude_dirs = ["tests"]
