[project]
name = "cairo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "cairo-lang>=0.13.2",
  "ethereum",
  "marshmallow-dataclass>=8.6.1",
  "python-dotenv>=1.0.1",
  "toml>=0.10.2",
  "web3>=7.2.0",
]

[project.scripts]
compile = "src.utils.compile_cairo:compile_os"
transpile = "scripts.convert_py_to_cairo:main"
generate-tests = "scripts.generate_tests:main"

[tool.uv]
dev-dependencies = [
  "eth-abi>=5.1.0",
  "eth-account>=0.13.3",
  "eth-keys>=0.5.1",
  "eth-utils>=5.0.0",
  "hypothesis>=6.112.1",
  "ipykernel>=6.29.5",
  "protobuf>=5.28.1",
  "pytest-xdist>=3.6.1",
  "pytest>=8.3.3",
  "pydantic>=2.9.1",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.uv.sources]
ethereum = { git = "https://github.com/ethereum/execution-specs.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
