[package]
name = "cairo_addons"
version = "0.1.0"
edition = "2021"

[lib]
name = "vm"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.23.3", features = [
  "extension-module",
  "abi3-py39",
  "num-bigint",
  "experimental-inspect",
] }
cairo-vm = { workspace = true }
num-traits = "0.2.18"
num-bigint = "0.4.6"
starknet-crypto = "0.7.4"
revm = "19.4.0"
revm-precompile = "16.0.0"
lazy_static = "1.5.0"
starknet-types-core = "0.1.7"
nybbles = "0.3.4"
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", tag = "v0.15.3" }

[build-dependencies]
pyo3-build-config = "0.23.3" # Should match pyo3 version

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "pyo3/experimental-inspect"]
