[package]
name = "cairo_addons"
version = "0.1.0"
edition = "2021"

[lib]
name = "vm"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.23.3", features = [
  "extension-module",
  "abi3-py39",
  "num-bigint",
  "experimental-inspect",
] }
cairo-vm = { workspace = true }
stwo-cairo-adapter = { workspace = true }
stwo_cairo_prover = { workspace = true }
cairo-air = { workspace = true }
num-traits = "0.2.18"
num-bigint = "0.4.6"
starknet-crypto = "0.7.4"
revm = "19.4.0"
revm-precompile = "17.0.0-alpha.1"
lazy_static = "1.5.0"
starknet-types-core = "0.1.7"
nybbles = "0.3.4"
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", tag = "v0.15.3", features = [
  "python",
] }
polars = { version = "0.46" }
pyo3-polars = "0.20.0"
thiserror = "2.0"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
  "serde",
] }
chrono = "0.4.40"
serde_json = "1.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"

[build-dependencies]
pyo3-build-config = "0.23.3" # Should match pyo3 version

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "pyo3/experimental-inspect"]
