[package]
build = "build.rs"
name = "keth-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }
clap = { version = "4.5.1", features = ["derive"] }

[build-dependencies]
dotenvy = "0.15.7"

[lints]
workspace = true
