[package]
name = "kakarot-node"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kakarot-pool = { workspace = true }

reth-node-ethereum = { workspace = true }
reth-node-builder = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-chainspec = { workspace = true }
reth-node-api = { workspace = true }
reth-trie-db = { workspace = true }

serde = { workspace = true }
