[project]
name = "cairo-addons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Clément Walter", email = "clement0walter@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cairo-addons = "cairo_addons:main"

[tool.maturin]
module-name = "cairo_addons._core"
python-packages = ["cairo_addons"]
python-source = "src"
manifest-path = "../../crates/cairo-addons/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
