[project]
name = "cairo-addons"
version = "0.1.0"
description = "Tooling for Cairo"
readme = "README.md"
authors = [{ name = "Clément Walter", email = "clement0walter@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "cairo-lang>=0.13.3",
  "maturin>=1.8.1",
  "polars>=1.18.0",
  "xxhash>=3.5.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "pythonic-hints"]
module-name = "cairo_addons.vm"
python-packages = ["cairo_addons"]
python-source = "src"
manifest-path = "../../crates/cairo-addons/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
  "cairo-lang>=0.13.0",
  "hypothesis>=6.124.3",
  "jupyter>=1.1.1",
]

[tool.isort]
profile = "black"
known_third_party = ["ethereum", "ethereum_rlp", "ethereum_types"]
known_first_party = ["cairo_addons", "cairo_core", "cairo_ec"]

[project.entry-points."pytest11"]
cairo_hooks = "cairo_addons.testing.hooks"
