[project]
name = "cairo-core"
version = "0.1.0"
description = "An extended Cairo core library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cairo-addons", "cairo-lang>=0.13.3", "garaga"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/**/*.cairo", # Include all .cairo files in src directory
]

[tool.hatch.build]
artifacts = [
  "src/**/*.cairo", # Also include .cairo files as artifacts
]

[tool.uv.sources]
cairo-addons = { workspace = true }
garaga = { git = "https://github.com/keep-starknet-strange/garaga.git", rev = "hydra_upd" }

[tool.isort]
profile = "black"
known_first_party = ["cairo_addons", "cairo_core", "cairo_ec"]

[dependency-groups]
dev = ["hypothesis>=6.124.3"]
